package paycore.paycore.usecase;

import paycore.paycore.common.UseCase;
import paycore.paycore.usecase.model.WorkerRequest;

public interface WorkerUseCase extends UseCase<WorkerRequest, Void> {
}