package paycore.paycore.domain;

public enum OutboxStatus {
    PENDING,
    SENT
}