@startuml
skinparam linetype ortho
skinparam ranksep 80
skinparam nodesep 80

' ===========================
' DOMAIN LAYER
' ===========================

enum OutboxStatus {
    PENDING
    SENT
}

enum EventType {
    SUCCESS
    FAILURE
}

class PaymentOutboxEntity {
    +UUID sagaId
    +UUID paymentId
    +OutboxStatus status
    +EventType eventType
    +String apiKey
    +BigDecimal amount
    +LocalDateTime createdAt
}


' ===========================
' BUSINESS LAYER
' ===========================

UseCase -[hidden]d-> WorkerUseCase
WorkerUseCase -[hidden]d-> WorkerService

' --- Common UseCase ---
interface UseCase<I, O> {
    +O execute(I input)
}


' --- DTO / Request / Record ---
class WorkerRequest {
    +UUID sagaId
    +UUID paymentId
    +OutboxStatus status
    +EventType eventType
    +String apiKey
    +BigDecimal amount
    +long createdAt
}

class PaymentOutboxRecord {
    +UUID sagaId()
    +UUID paymentId()
    +OutboxStatus status()
    +EventType eventType()
    +String apiKey()
    +BigDecimal amount()
    +long createdAt()
}


' --- UseCase Interface ---
interface WorkerUseCase {
    +Void execute(WorkerRequest input)
}

WorkerUseCase -u-|> UseCase


' --- Listener ---
class DebeziumMessageListener {
    +handler(Message<?> message) : Void
    -WorkerUseCase workerUseCase
}


' --- Service ---
class WorkerService {
    +execute(WorkerRequest input) : Void
    -RabbitMqPublisher rabbitMqPublisher
}

WorkerService ..|> WorkerUseCase


' --- Messaging Publisher ---
class RabbitMqPublisher {
    +publish(String exchange, String routingKey,
             WorkerRequest input, CorrelationData correlationData) : void
    -RabbitTemplate rabbitTemplate
}


' ===========================
' BUSINESS LAYER RELATIONSHIPS ONLY
' (도메인 레이어와의 연결은 표기하지 않음)
' ===========================

DebeziumMessageListener --> WorkerUseCase


WorkerService --> RabbitMqPublisher

@enduml
